--- a/EMPmanage/Views/Employees/Index.cshtml
+++ b/EMPmanage/Views/Employees/Index.cshtml
@@ -21,14 +21,17 @@
 </thead>
 
 <tbody>
-  @foreach(var employees in Model){
-    <tr>
-      <td>@employees.SN</td>
-      <td>@employees.Fname</td>
-      <td>@employees.Lname </td>
-      <td>@employees.Address</td>
-      <td>@employees.Gender</td>
-      <td>@employees.Salary</td>
+  @for (int i=0;i<Model.Count;i++)
+  {
+    <tr><td>@(i+1)</td>
+      <td>
+        <a href="/employees/details?firstname=@Model[i].Fname">@Model[i].Fname</a>
+        </td>
+     <td>@Model[i].SN </td>
+      <td>@Model[i].Lname </td>
+      <td>@Model[i].Address</td>
+      <td>@Model[i].Gender</td>
+      <td>@Model[i].Salary</td>
     </tr>
   }
 
