form addition and validation

--- a/EMPmanage/Views/Employees/Details.cshtml
+++ b/EMPmanage/Views/Employees/Details.cshtml
@@ -2,8 +2,8 @@
 @model People
 <h1>Employee detail</h1>
 <ul class="list-group">
-  <li class="list-group-item">Firstname:@Model.Fname</li>
-  <li class="list-group-item">Lastname:@Model.Lname</li>
+  <li class="list-group-item">Firstname:@Model.Firstname</li>
+  <li class="list-group-item">Lastname:@Model.Lastname</li>
   <li class="list-group-item">Address:@Model.Address</li>
   <li class="list-group-item">Gender:@Model.Gender</li>
   <li class="list-group-item">Salary:@Model.Salary</li>
