--- a/EMPmanage/Views/Employees/Index.cshtml
+++ b/EMPmanage/Views/Employees/Index.cshtml
@@ -25,10 +25,10 @@
   {
     <tr><td>@(i+1)</td>
       <td>
-        <a href="/employees/details?firstname=@Model[i].Fname">@Model[i].Fname</a>
+        <a href="/employees/details?firstname=@Model[i].Firstname">@Model[i].Firstname</a>
         </td>
      <td>@Model[i].SN </td>
-      <td>@Model[i].Lname </td>
+      <td>@Model[i].Lastname </td>
       <td>@Model[i].Address</td>
       <td>@Model[i].Gender</td>
       <td>@Model[i].Salary</td>
